RESOLVED FIXED275225
[WebGPU] runClearEncoder can fail validation when depth-stencil texture is destroyed
https://bugs.webkit.org/show_bug.cgi?id=275225
Summary [WebGPU] runClearEncoder can fail validation when depth-stencil texture is de...
Mike Wyrzykowski
Reported 2024-06-06 14:46:47 PDT
[WebGPU] runClearEncoder can fail validation when depth-stencil texture is destroyed
Attachments
Mike Wyrzykowski
Comment 1 2024-06-06 14:47:09 PDT
Mike Wyrzykowski
Comment 2 2024-06-06 14:54:22 PDT
EWS
Comment 3 2024-06-07 09:31:30 PDT
Committed 279816@main (c36a992b81f2): <https://commits.webkit.org/279816@main> Reviewed commits have been landed. Closing PR #29594 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.