[WebGPU] runClearEncoder can fail validation when depth-stencil texture is destroyed https://bugs.webkit.org/show_bug.cgi?id=275225 <radar://129354753>

Reviewed by Dan Glastonbury.

Consulting the MTLTexture's pixelFormat is incorrect for destroyed textures,
but we already have the WGPUTextureFormat, so we can use that.

* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::endPass):

Canonical link: https://commits.webkit.org/279816@main